--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,7 +8,14 @@
 }
 
 body {
+  height: 100vh;
+  overflow: hidden;
   background-color: var(--tg-theme-bg-color);
+}
+
+#root {
+  height: 100%;
+  overflow-y: scroll;
 }
 
 .icon {
