--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -49,8 +49,10 @@ img {
   }
 }
 
-.sferum {
+.infolesson {
+  display: block;
+}
+
+.callmain {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
