--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -38,7 +38,8 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 16vh;
+  margin-bottom: 20vh;
+  width: 100%;
 
   .authortext {
     color: #939393;
