--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import "./fonts/fonts.scss";
 @import "./map.scss";
+@import "./author.scss";
 
 * {
   margin: 0;
@@ -32,22 +33,6 @@ img {
 .call {
   display: flex;
   align-items: center;
-}
-
-.author {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin-bottom: 18.5vh;
-
-  .authortext {
-    color: #939393;
-
-    ins {
-      cursor: pointer;
-    }
-  }
 }
 
 .infolesson {
